chore: Update npm dependencies and add TypeScript 5.5.4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
   "prettier.configPath": ".prettierrc.json",
   "files.trimTrailingWhitespace": true,
   "typescript.preferences.quoteStyle": "double",
-  "svg.preview.background": "white"
+  "svg.preview.background": "white",
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
